<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\;t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="app_name">Pocket Money</string>
    <string name="account_info">Account Info</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="kLOC_TRANSFERS_RESTORE">Make sure the \'PockeyMoneyDB.sql\' file is in the folder \'Download/PocketMoneyBackup\'.\n\n Restore will delete your current PocketMoney database and replace it with the imported data</string>
    <string name="kLOC_TRANSFERS_RESTORE_CONFIRM">Are you sure you want to restore, this action is NOT undoable</string>
    <string name="kLOC_TRANSFERS_BACKUPFILE_INFO">The backup file will be placed in the \'Download/PocketMoneyBackup\' folder and is called \'PocketMoneyDB.sql\'</string>
    <string name="kLOC_TOOLS_FILETRANSFERS_SDCARD">Local Storage Transfers &#8230;</string>
    <string name="kLOC_TOOLS_BACKUP_SD">Backup &#8230;</string>
    <string name="kLOC_TOOLS_RESTORE_SD">Restore &#8230;</string>
    <string name="kLOC_TOOLS_IMPORT_SD">Import &#8230;</string>
    <string name="kLOC_TOOLS_EXPORT_SD">Export &#8230;</string>
    <string name="kLOC_GENERAL_BACK">Back</string>
    <string name="kLOC_GENERAL_OK">OK</string>
    <string name="kLOC_GENERAL_CANCEL">Cancel</string>
    <string name="kLOC_GENERAL_DELETE">Delete</string>
    <string name="kLOC_GENERAL_EDIT">Edit</string>
    <string name="kLOC_GENERAL_DONE">Done</string>
    <string name="kLOC_GENERAL_SAVE">Save</string>
    <string name="kLOC_GENERAL_REPLACE">Replace</string>
    <string name="kLOC_GENERAL_PROCESSING">Processing &#8230;</string>
    <string name="kLOC_GENERAL_TOOLS">Tools</string>
    <string name="kLOC_GENERAL_DATE">Date</string>
    <string name="kLOC_GENERAL_TIME">Time</string>
    <string name="kLOC_GENERAL_ACCOUNT">Account</string>
    <string name="kLOC_GENERAL_ACCOUNTS">Accounts</string>
    <string name="kLOC_GENERAL_TRANSFER_TO_ACCOUNT">Transfer To Account</string>
    <string name="kLOC_GENERAL_CATEGORY">Category</string>
    <string name="kLOC_GENERAL_CATEGORY_TITLE">Categories</string>
    <string name="kLOC_GENERAL_PAYEE">Payee</string>
    <string name="kLOC_GENERAL_PAYEE_TITLE">Payees</string>
    <string name="kLOC_GENERAL_ID">ID#</string>
    <string name="kLOC_GENERAL_ID_TITLE">IDs</string>
    <string name="kLOC_GENERAL_AMOUNT">Amount</string>
    <string name="kLOC_GENERAL_AMOUNT_TITLE">Amounts</string>
    <string name="kLOC_GENERAL_CLASS">Class</string>
    <string name="kLOC_GENERAL_CLASSES">Classes</string>
    <string name="kLOC_GENERAL_SPLITS_TITLE">Splits</string>
    <string name="kLOC_GENERAL_NOTE">Memo</string>
    <string name="kLOC_GENERAL_CLEARED">Cleared</string>
    <string name="kLOC_GENERAL_SPLITS">&lt;&#8213;splits&#8213;&gt;</string>
    <string name="kLOC_GENERAL_BUYCHARTS">Buy More Charts</string>
    <string name="kLOC_ACCOUNT_CURRENCY_LABEL">Currency</string>
    <string name="kLOC_PREFERENCES_SHOW_ACCOUNTS_TITLE">Show Accounts:</string>
    <string name="kLOC_PREFERENCES_SHOW_ALL">All</string>
    <string name="kLOC_PREFERENCES_ABOUT_TITLE">About PocketMoney</string>
    <string name="kLOC_PREFERENCES_HELP_TITLE">Help &amp; Video Tutorials</string>
    <string name="kLOC_PREFERENCES_PASSWORD_TITLE">Password</string>
    <string name="kLOC_PREFERENCES_HOME_CURRENCY_TITLE">Home Currency</string>
    <string name="kLOC_PREFERENCES_MULTIPLE_CURRENCIES_TITLE">Multiple Currencies</string>
    <string name="kLOC_PREFERENCES_AUTOADD_TITLE">Add new items to lists</string>
    <string name="kLOC_EDIT_TRANSACTION_TITLE">Edit Transaction</string>
    <string name="kLOC_EXCHANGERATE_WORKSHEET_FOREIGNAMOUNT">Foreign Amount</string>
    <string name="kLOC_TOOLS_RECONCILE_CATEGORY">Miscellaneous</string>
    <string name="kLOC_TRUNCATE_ID">Truncate ID</string>
    <string name="kLOC_SHOW_BALANCES_CURRENT">Current Balance</string>
    <string name="kLOC_SHOW_BALANCES_OVERALL">Future Balance</string>
    <string name="kLOC_TRANSACTIONS_OPTIONS_SHOW">Show:</string>
    <string name="kLOC_FILTERS_ALL_ACCOUNTS">All Accounts</string>
    <string name="kLOC_PREFERENCES_ENCODING">File Encoding</string>
    <string name="kLOC_PREFERENCES_ALLOWQIFDUPS">Import duplicates</string>
    <string name="kLOC_EDIT_REPEATING_ENDONNONE">No end date</string>
    <string name="kLOC_GENERAL_NONE">None</string>
    <string name="kLOC_ALL_TRANSACTIONS">All Transactions</string>
    <string name="kLOC_REPEATING_TRANSACTIONS">Repeating Transactions</string>
    <string name="kLOC_PREFERENCES_PASSWORD_CONFIRM">Confirm</string>
    <string name="kLOC_GENERAL_BUDGETS">Budgets</string>
    <string name="kLOC_TOOLS_FILTERS">Filters</string>
    <string name="kLOC_QIFOPTIONS_TITLE">QIF Options</string>
    <string name="kLOC_QIFOPTIONS_FILEFORMAT">File Format</string>
    <string name="kLOC_QIFOPTIONS_DATEFORMAT">Date Format</string>
    <string name="kLOC_QIFOPTIONS_DATESEPARATOR">Date Separator</string>
    <string name="kLOC_QIFOPTIONS_NUMBERFORMAT">Number Format</string>
    <string name="kLOC_QIFOPTIONS_IMPORTOPTIONS">Import Options</string>
    <string name="kLOC_QIFOPTIONS_MARKALLCLEARED">Mark All Cleared</string>
    <string name="kLOC_GENERAL_DEFAULT">Default</string>
    <string name="kLOC_EMAILPARTNEROPTIONS_TITLE">Email Partner Options</string>
    <string name="kLOC_TRANSACTIONS_OPTIONS_TRANSTOANDTO">Transfer and Payee</string>
    <string name="kLOC_GENERAL_ASOFDATE">As of date</string>
    <string name="kLOC_BUDGET_SHOWCENTS">Show cents</string>
    <string name="kLOC_PASSWORDDELAY">Delay</string>
    <string name="kLOC_BUDGET_SHOWUNBUDGETED">Show unbudgeted</string>
    <string name="kLOC_PREFS_UPDATEEXCHANGERATES">Update exchange rates</string>
    <string name="kLOC_PREFERENCES_AUTOFILL">Auto-complete transactions</string>
    <string name="kLOC_SHOW_SECTIONS">Group by Account Type</string>
    <string name="kLOC_GENERAL_REPORTS">Reports</string>
    <string name="kLOC_TRANSACTIONS_OPTIONS_STARTEDIT">On new transaction start editing:</string>
    <string name="kLOC_PREFS_SECURITY">Security</string>
    <string name="kLOC_PREFS_DATATRANFER">Data Transfers</string>
    <string name="kLOC_PREFS_MANAGEDLISTS">Managed Lists</string>
    <string name="kLOC_PREFS_VIEWOPTIONS">Display Options</string>
    <string name="kLOC_PREFS_VIEWOPTIONS_REGISTER">Transaction Register</string>
    <string name="kLOC_FILETRANSFERS_MODE">Transfer Mode</string>
    <string name="kLOC_BUDGETS_HIDEZEROACTUALS">Hide Actual Expenses if 0</string>
    <string name="kLOC_QIFOPTIONS_MSMONEYEXPORT">Create a File for Each Account</string>
    <string name="kLOC_BUDGET_INCLUDEUNBUDGETED">Include unbudgeted in total</string>
    <string name="kLOC_QIFOPTIONS_EXPORTOPTIONS">Export Options</string>
    <string name="kLOC_INAPPPURCHASES_THEMESTITLE">Themes</string>
    <string name="kLOC_QIF_WIPETRANSACTIONS">Wipe only transactions on restore</string>
    <string name="kLOC_TRANSACTIONS_OPTIONS_UNLINKID">Unlink ID Field in Transfers</string>
    <string name="kLOC_BUDGETS_INCLUDETRANSFER">Include Both Sides of Transfers</string>
    <string name="kLOC_PREFERENCES_AUTOSUGGEST">Suggest Input</string>
    <string name="kLOC_SAVE_BALANCES_BAR_UNIFIED">Unified Balance Bar</string>
    <string name="kLOC_TRANSACTION_SORTDATEAMOUNT">Date, Amount</string>
    <string name="receipt_image">Receipt image</string>
    <string name="kLOC_BUDGET_LBL_ASCENDING">Low to High (Asc)</string>
    <string name="kLOC_BUDGET_LBL_DESCENDING">High to Low (Desc)</string>
</resources>