<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="DataTransferPrefs"
    android:title="@string/kLOC_QIFOPTIONS_TITLE">

    <PreferenceCategory android:title="@string/kLOC_QIFOPTIONS_FILEFORMAT">

        <ListPreference
            android:defaultValue="@string/kLOC_GENERAL_DEFAULT"
            android:key="datatransferqifdateformat"
            android:title="@string/kLOC_QIFOPTIONS_DATEFORMAT" />

        <ListPreference
            android:defaultValue="@string/kLOC_GENERAL_DEFAULT"
            android:key="datatransferqifdateseparator"
            android:title="@string/kLOC_QIFOPTIONS_DATESEPARATOR" />

        <ListPreference
            android:defaultValue="@string/kLOC_GENERAL_DEFAULT"
            android:key="datatransfernumberformat"
            android:title="@string/kLOC_QIFOPTIONS_NUMBERFORMAT" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/kLOC_QIFOPTIONS_IMPORTOPTIONS">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="datatransferqifmarkallclear"
            android:title="@string/kLOC_QIFOPTIONS_MARKALLCLEARED" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="datatransferqifimportdups"
            android:title="@string/kLOC_PREFERENCES_ALLOWQIFDUPS" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="datatransferqifwipeonlyonrestore"
            android:title="@string/kLOC_QIF_WIPETRANSACTIONS" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="datatransferqifbudgets"
            android:title="@string/kLOC_GENERAL_BUDGETS" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/kLOC_QIFOPTIONS_EXPORTOPTIONS">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="datatransferqiffileforeachaccount"
            android:title="@string/kLOC_QIFOPTIONS_MSMONEYEXPORT" />

    </PreferenceCategory>

</PreferenceScreen>
