<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/kLOC_EDIT_TRANSACTION_TITLE">

    <ListPreference
        android:defaultValue="@string/kLOC_GENERAL_NONE"
        android:key="prefsdisplayeditstartediting"
        android:title="@string/kLOC_TRANSACTIONS_OPTIONS_STARTEDIT" />

    <PreferenceCategory>
        <CheckBoxPreference
            android:key="prefsmanagedlistsautofill"
            android:title="@string/kLOC_PREFERENCES_AUTOFILL" />
        <CheckBoxPreference
            android:key="prefsautosuggest"
            android:title="@string/kLOC_PREFERENCES_AUTOSUGGEST" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/kLOC_TRANSACTIONS_OPTIONS_SHOW">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefsdisplayedittime"
            android:title="@string/kLOC_GENERAL_TIME" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefsdisplayedittransferandpayee"
            android:title="@string/kLOC_TRANSACTIONS_OPTIONS_TRANSTOANDTO" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefsdisplayeditcategory"
            android:title="@string/kLOC_GENERAL_CATEGORY" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefsdispplayeditcatposition"
            android:title="Category above Payee" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefsdisplayeditid"
            android:title="@string/kLOC_GENERAL_ID" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefsdisplayeditcleared"
            android:title="@string/kLOC_GENERAL_CLEARED" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefsdisplayeditmemo"
            android:title="@string/kLOC_GENERAL_NOTE" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefsdisplayeditclass"
            android:title="@string/kLOC_GENERAL_CLASS" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefsdisplayeditunlink"
            android:title="@string/kLOC_TRANSACTIONS_OPTIONS_UNLINKID" />

    </PreferenceCategory>

</PreferenceScreen>
