<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/kLOC_GENERAL_REPORTS">

    <CheckBoxPreference
        android:title="@string/kLOC_FILTERS_ALL_ACCOUNTS"
        android:key="budgetShowAllAccounts"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:title="@string/kLOC_BUDGET_SHOWCENTS"
        android:key="budgetShowCents"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:title="@string/kLOC_BUDGET_SHOWUNBUDGETED"
        android:key="budgetShowUnbudgeted"
        android:defaultValue="fasle" />

    <CheckBoxPreference
        android:title="@string/kLOC_BUDGET_INCLUDEUNBUDGETED"
        android:key="budgetIncludeUnbudgeted"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:title="@string/kLOC_BUDGETS_HIDEZEROACTUALS"
        android:key="budgetHideZeros"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:title="@string/kLOC_BUDGETS_INCLUDETRANSFER"
        android:key="budgetIncludeTransfers"
        android:defaultValue="false" />

</PreferenceScreen>
