<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="PLACEHOLDER">//todo: Entered this text to prevent red error. Work out what this
    is doing as it doesn't seem to appear in the preference screen

    <ListPreference
        android:defaultValue="@string/kLOC_PREFERENCES_SHOW_ALL"
        android:key="viewaccountslistpreference"
        android:title="@string/kLOC_PREFERENCES_SHOW_ACCOUNTS_TITLE" />

    <PreferenceCategory android:title="@string/kLOC_SHOW_BALANCES_OVERALL">

        <Preference
            android:key="prefsaccountsviewoptionsasofdate"
            android:summary="@string/kLOC_EDIT_REPEATING_ENDONNONE"
            android:title="@string/kLOC_GENERAL_ASOFDATE" />

    </PreferenceCategory>

</PreferenceScreen>
