<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/kLOC_GENERAL_ACCOUNTS">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="prefsdisplayaccountgroupbyaccounttype"
        android:title="@string/kLOC_SHOW_SECTIONS" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="prefsdisplayaccountalltransactions"
        android:title="@string/kLOC_ALL_TRANSACTIONS" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="prefsdisplayaccountfilters"
        android:title="@string/kLOC_TOOLS_FILTERS" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="prefsdisplayaccountrepeatingtransactions"
        android:title="@string/kLOC_REPEATING_TRANSACTIONS" />

</PreferenceScreen>
