<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="DataTransferPrefs"
    android:title="@string/kLOC_PREFS_DATATRANFER">

    <ListPreference
        android:defaultValue="0"
        android:key="prefsdatatransferstransfermode"
        android:summary="SDCard"
        android:title="@string/kLOC_FILETRANSFERS_MODE" />

    <ListPreference
        android:defaultValue="0"
        android:key="prefsdatatransferssdcard"
        android:summary=""
        android:title="Storage Device" />

    <PreferenceCategory android:title="">

        <ListPreference
            android:defaultValue="ISO-8859-1"
            android:key="prefsdatatransfersfileencoding"
            android:summary="Western (ISO Latin 1)"
            android:title="@string/kLOC_PREFERENCES_ENCODING" />

    </PreferenceCategory>

    <PreferenceCategory android:title="">

        <Preference
            android:key="prefsdatatransfersqifoptions"
            android:title="@string/kLOC_QIFOPTIONS_TITLE" />

        <Preference
            android:key="datatransferemailprefs"
            android:title="@string/kLOC_EMAILPARTNEROPTIONS_TITLE" />

    </PreferenceCategory>

</PreferenceScreen>
