<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_view"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:contentDescription="@string/receipt_image" />

    <LinearLayout
        android:id="@+id/bottom_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:gravity="center"
        android:padding="8dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/replace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/kLOC_GENERAL_REPLACE"
            style="@style/Widget.MaterialComponents.Button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kLOC_GENERAL_DELETE"
            style="@style/Widget.MaterialComponents.Button" />

    </LinearLayout>

</LinearLayout>
